--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+		<jackson.version>2.4.5</jackson.version>
 		<cxf.version>3.0.1</cxf.version>
 		<sigar.version>1.6.5.132</sigar.version>
-		<spring-boot.version>1.2.2.RELEASE</spring-boot.version>
+		<spring-boot.version>1.2.3.RELEASE</spring-boot.version>
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -53,6 +54,12 @@
 			<version>2.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.kohsuke</groupId>
+			<artifactId>wordnet-random-name</artifactId>
+			<version>1.3</version>
+		</dependency>
+
 		<!-- Jackson -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -61,6 +68,29 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-guava</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hppc</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-afterburner</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<!-- CSV -->
@@ -100,12 +130,12 @@
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
-			<version>3.3.3</version>
+			<version>3.4.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-spring</artifactId>
-			<version>3.3.3</version>
+			<version>3.4.2</version>
 		</dependency>
 
 		<dependency>
@@ -318,6 +348,15 @@
 			<version>1.0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-joda</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
