--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,8 @@ logging:
     level:
         org.springframework: INFO
         io.mandrel: DEBUG
+        io.mandrel.messaging: TRACE
+        io.mandrel.http: TRACE
         
 management:
     context-path: /admin
