Update requester configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,8 @@ logging:
         pattern: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wex"
     level:
         org.springframework: INFO
-        io.mandrel: TRACE
+        io.mandrel: DEBUG
+        io.mandrel.messaging: DEBUG
         
 management:
     context-path: /admin
