--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,16 @@
 			<artifactId>async-http-client</artifactId>
 			<version>1.9.22</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpasyncclient</artifactId>
+			<version>4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.4.1</version>
+		</dependency>
 
 		<!-- HZ -->
 		<dependency>
