--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,22 @@
 			<version>4.4.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-resolver-dns</artifactId>
+			<version>4.1.0.Beta5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec-dns</artifactId>
+			<version>4.1.0.Beta5</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport-native-epoll</artifactId>
+			<version>4.1.0.Beta5</version>
+		</dependency>
+
 		<!-- HZ -->
 		<dependency>
 			<groupId>com.hazelcast</groupId>
@@ -535,9 +551,9 @@
 										<include name="**/lib/*" />
 									</fileset>
 								</move>
-								<copy toDir="${project.build.directory}/generated-resources/appassembler/jsw/mandrel/lib">
-									<fileset
-										dir="dist/lib/native"/>
+								<copy
+									toDir="${project.build.directory}/generated-resources/appassembler/jsw/mandrel/lib">
+									<fileset dir="dist/lib/native" />
 								</copy>
 								<delete dir="${project.build.directory}/tmp" />
 							</tasks>
@@ -682,17 +698,17 @@
 									</mapper>
 								</data>
 								<data>
-                                    <src>${project.basedir}/src/deb/init.d/</src>
-                                    <type>directory</type>
-                                    <excludes>.DS_Store</excludes>
-                                    <mapper>
-                                        <type>perm</type>
-                                        <prefix>/etc/init.d</prefix>
-                                        <filemode>755</filemode>
-                                        <user>root</user>
-                                        <group>root</group>
-                                    </mapper>
-                                </data>
+									<src>${project.basedir}/src/deb/init.d/</src>
+									<type>directory</type>
+									<excludes>.DS_Store</excludes>
+									<mapper>
+										<type>perm</type>
+										<prefix>/etc/init.d</prefix>
+										<filemode>755</filemode>
+										<user>root</user>
+										<group>root</group>
+									</mapper>
+								</data>
 								<data>
 									<src>target/generated-resources/appassembler/jsw/mandrel/conf/</src>
 									<type>directory</type>
