--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,14 @@
 		<!-- General Properties -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
 
 		<!-- Dependencies -->
 		<jackson.version>2.4.5</jackson.version>
 		<cxf.version>3.0.1</cxf.version>
 		<sigar.version>1.6.5.132</sigar.version>
 		<spring-boot.version>1.2.3.RELEASE</spring-boot.version>
-		<java.version>1.8</java.version>
+		<netty.version>4.1.0.Beta5</netty.version>
 
 		<!-- Maven Plugin Dependencies -->
 		<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
@@ -113,6 +114,16 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-joda</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.crawler-commons</groupId>
+			<artifactId>crawler-commons</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
 
 		<!-- CSV -->
 		<dependency>
@@ -160,17 +171,17 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-resolver-dns</artifactId>
-			<version>4.1.0.Beta5</version>
+			<version>${netty.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-codec-dns</artifactId>
-			<version>4.1.0.Beta5</version>
+			<version>${netty.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-transport-native-epoll</artifactId>
-			<version>4.1.0.Beta5</version>
+			<version>${netty.version}</version>
 		</dependency>
 
 		<!-- HZ -->
@@ -209,20 +220,8 @@
 		<!-- </dependency> -->
 
 		<dependency>
-			<groupId>com.google.code.crawler-commons</groupId>
-			<artifactId>crawler-commons</artifactId>
-			<version>0.5</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
 		</dependency>
 
 		<!-- Monitoring -->
@@ -236,6 +235,11 @@
 			<artifactId>sigar-dist</artifactId>
 			<version>${sigar.version}</version>
 			<type>zip</type>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.servo</groupId>
+			<artifactId>servo-core</artifactId>
+			<version>0.9.4</version>
 		</dependency>
 
 		<dependency>
@@ -275,7 +279,7 @@
 			<version>0.3.4-1</version>
 		</dependency>
 
-		<!-- Well, Spring... -->
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -311,16 +315,23 @@
 			<artifactId>spring-data-commons</artifactId>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>org.springframework.cloud</groupId> -->
-		<!-- <artifactId>spring-cloud-cluster-hazelcast</artifactId> -->
-		<!-- <version>1.0.0.RC1</version> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-commons</artifactId>
 			<version>1.0.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-yarn-boot</artifactId>
+			<version>2.2.0.RELEASE</version>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.cloud</groupId> -->
+		<!-- <artifactId>spring-cloud-cluster-hazelcast</artifactId> -->
+		<!-- <version>1.0.0.RC1</version> -->
+		<!-- </dependency> -->
+
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-messaging</artifactId>
@@ -603,6 +614,12 @@
 							<copyConfigurationDirectory>true</copyConfigurationDirectory>
 							<configurationDirectory>conf</configurationDirectory>
 							<logsDirectory>logs</logsDirectory>
+							<programs>
+								<program>
+									<mainClass>com.mycompany.app.App</mainClass>
+									<id>yarn-deploy</id>
+								</program>
+							</programs>
 							<daemons>
 								<daemon>
 									<id>mandrel</id>
