--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,16 @@
 			<artifactId>snappy-java</artifactId>
 			<version>1.1.1.7</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.code.crawler-commons</groupId>
+			<artifactId>crawler-commons</artifactId>
+			<version>0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.kohsuke</groupId>
 			<artifactId>wordnet-random-name</artifactId>
@@ -124,14 +133,9 @@
 			<artifactId>jackson-datatype-joda</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.crawler-commons</groupId>
-			<artifactId>crawler-commons</artifactId>
-			<version>0.5</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-jsonSchema</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<!-- CSV -->
