--- a/pom.xml
+++ b/pom.xml
@@ -327,7 +327,17 @@
 			<artifactId>sockjs-client</artifactId>
 			<version>0.3.4-1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery.sparkline</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>chartjs</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
