Update spider UI, add metrics display, extract Freemarker functions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,13 @@ info:
     name: @project.name@
     description: @project.description@
     version: @project.version@
+    commit:
+        id: @git.commit.id@
+        message: @git.commit.message.full@
+        time: @git.commit.time@
+        branch: @git.branch@
+        dirty: @git.dirty@
+        originUrl: @git.remote.origin.url@
 
 endpoints:
     shutdown:
